src/test/run-pass/array-slice-vec/vec-push.rs
// run-pass

pub fn main() { let mut v = vec![1, 2, 3]; v.push(1); }
